--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     crossorigin="anonymous" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json"
     crossorigin="use-credentials" />
+  <script src="https://kit.fontawesome.com/293685c6a6.js"
+    crossorigin="anonymous"></script>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
