Replace favicon and update manifest file

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
     crossorigin="anonymous" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json"
     crossorigin="use-credentials" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lora&family=Vollkorn&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/293685c6a6.js"
     crossorigin="anonymous"></script>
   <!--
